--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.1.0
   flutter_riverpod: ^2.5.1
+  go_router: ^14.2.1
   intl: ^0.19.0
 
 dev_dependencies:
